--- a/MensaAppLibrary/build.gradle
+++ b/MensaAppLibrary/build.gradle
@@ -3,7 +3,9 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
-
+    dexOptions {
+        preDexLibraries = false
+    }
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 25
@@ -26,6 +28,5 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.0.0'
     testCompile 'junit:junit:4.12'
 }
