--- a/MensaAppLibrary/src/main/AndroidManifest.xml
+++ b/MensaAppLibrary/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="bt.MensaApp">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="bt.MensaApp.lib">
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
